--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Fairy tales'
 - !lcc 'PZ'
 - !lcsh 'Fairy tales -- China'
+- GITenberg
 title: The Chinese Fairy Book
 url: http://www.gutenberg.org/ebooks/29939
